async redis and views

--- a/boards/templates/boards/score_form.html
+++ b/boards/templates/boards/score_form.html
@@ -12,7 +12,7 @@
             const submit_button = document.getElementById("submit_score")
             const {board_id, id_username, id_score} = score_form.elements;
 
-            message: submit_button.addEventListener("click", () => {
+            submit_button.addEventListener("click", () => {
                 console.log("Submitting form.")
 
                 score_dialog.close()
