update one board when websocket recieved

--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -17,15 +17,19 @@
         })
     </script>
 </head>
-<h2 id="board_name">{{ board.name }}</h2>
-<span style="display: none;">{{ board.id }}</span>
-{% for score in board.scores %}
-<div>
-    <span>{{ score.value }}</span>
-    <span>{{ score.username }}</span>
+<div id=leaderboard_{{ board.id }}>
+    <h2 id="board_name">{{ board.name }}</h2>
+    <span style="display: none;">{{ board.id }}</span>
+    <div id=scores_{{ board.id }}>
+        {% for score in board.scores %}
+        <div>
+            <span>{{ score.value }}</span>
+            <span>{{ score.username }}</span>
+        </div>
+        {% endfor %}
+    </div>
+    <dialog id="score_dialog">
+        {% include "boards/score_form.html" %}
+    </dialog>
 </div>
-{% endfor %}
-<dialog id="score_dialog">
-    {% include "boards/score_form.html" %}
-</dialog>
 <!-- {% endblock %} -->
