--- a/boards/templates/boards/base.html
+++ b/boards/templates/boards/base.html
@@ -10,6 +10,6 @@
 </head>
 
 <body>
-    <!-- {% block content %}{% endblock %} -->
-    {% include "boards/index.html" %}
+    {% include "boards/navbar.html" %}
+    {% block content %}{% endblock %}
 </body>
